# DA_proj_1

./: CMakeLists.txt  Combination.cpp  Combination.h  Delivery.cpp  Delivery.h  Doxyfile  Van.cpp  Van.h  algorithms.cpp  algorithms.h  encomendas1.txt  main.cpp
docs/html/: Combination_8cpp.html  Combination_8cpp__incl.dot  Combination_8h_source.html  Delivery_8cpp.html  Delivery_8cpp__incl.dot  Delivery_8h_source.html  Menu_8cpp.html  Menu_8cpp__incl.dot  Menu_8h_source.html  Van_8cpp.html  Van_8cpp__incl.dot  Van_8h_source.html  algorithms_8cpp.html  algorithms_8cpp__incl.dot  algorithms_8cpp__incl.map  algorithms_8cpp__incl.md5  algorithms_8h_source.html  annotated.html  classCombination-members.html  classCombination.html  classDelivery-members.html  classDelivery.html  classMenu-members.html  classMenu.html  classVan-members.html  classVan.html  classVan__coll__graph.dot  classes.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  files.html  functions.html  functions_func.html  globals.html  globals_func.html  graph_legend.html  index.html  md_README.html  menudata.js  pages.html
docs/latex/: Combination_8cpp.tex  Combination_8cpp.tex.tmp  Combination_8cpp__incl.dot  Combination_8h_source.tex  Delivery_8cpp.tex  Delivery_8cpp__incl.dot  Delivery_8h_source.tex  Menu_8cpp.tex  Menu_8cpp__incl.dot  Menu_8h_source.tex  Van_8cpp.tex  Van_8cpp__incl.dot  Van_8h_source.tex  algorithms_8cpp.tex  annotated.tex  (+10 more)
src/: CMakeLists.txt  Combination.cpp  Delivery.cpp  Menu.cpp  Menu.h  Van.cpp  Van.h  algorithms.cpp  algorithms.h  carrinhas1.txt  main.cpp
tst/: Tests.cpp
(+28 files in other folders)
